# solana_logistics_trace

./: .env.example  .gitignore
backend/: Cargo.toml
backend/migrations/: 20260322120002_system_checkpoints.sql  20260322120003_incident_engine_seeds.sql  20260324120000_cat_product_thresholds.sql  20260518120000_reconcile_delivered_shipment_status.sql  20260518140000_shipment_details.sql  20260524120000_reconcile_lost_shipment_status.sql
backend/src/: config.rs  cors.rs  lib.rs  main.rs  tests.rs
backend/src/domain/: shipment_status.rs
backend/src/dto/: coordinates.rs  mod.rs  shipment_api.rs  shipment_details.rs  wallet_display.rs
backend/src/handlers/: actors.rs  catalogs.rs  health.rs  incidents.rs  mod.rs  public_shipments.rs  shipments.rs  telemetry.rs
backend/src/handlers/sync/: shipment.rs
backend/src/incident_engine/: gating.rs  mod.rs  models.rs
backend/src/incident_engine/jobs/: mod.rs
backend/src/incident_engine/processors/: incident_processor.rs
backend/src/incident_engine/repositories/: incidents.rs  telemetry.rs
backend/src/incident_engine/rules/: cold_chain.rs  delay.rs  humidity.rs  mod.rs  offline.rs  route.rs
backend/src/incident_engine/services/: rule_engine_service.rs
backend/src/incident_engine/simulators/: mod.rs
backend/src/repos/: actors.rs  checkpoints.rs  locations.rs  mod.rs  products.rs  shipments.rs
backend/src/services/: shipment_status_transition.rs
backend/src/solana/: borsh_accounts.rs  decode.rs  discriminators.rs  mod.rs  parse.rs
backend/tests/fixtures/: register_actor_tx.json
frontend/: README.md  (+2 more)
(+190 files in other folders)
